Fixed background vh when entering overflow

--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@ body {
   background: linear-gradient(45deg, rgb(78, 76, 160) 0%, rgb(35, 17, 65) 20%, rgb(53, 32, 90) 50%, rgb(35, 17, 65) 80%, rgb(78, 76, 160) 100%);
   color: white;
   background-repeat: no-repeat;
+  min-height: 100vh;
 }
 
 .display {
